# TuneUpPyTorchCode

./: README.md  cmderInVSC.md  pyproject.toml
PyTorch/: 00_pytorch_fundamentals_tjark.ipynb  README  README_wheel.md  main.py  multigpu.py  pyproject.toml  pytorch_multiGPU.py  quickstart.py  sphinx_documentation.py  take_all_gpus.py  testmodel.py
PyTorch/.ipynb_checkpoints/: 00_pytorch_fundamentals_tjark-checkpoint.ipynb
PyTorch/MultiGPUtrainingWithDDP/: checkpoint.pt
PyTorch/myenv/: pyvenv.cfg
PyTorch/myenv/Scripts/: activate  activate.bat
PyTorch/peotry-env/: pyvenv.cfg
PyTorch/peotry-env/Scripts/: activate  activate.bat
tuneuppytorchcode/: quickstart.py
tuneuppytorchcode/MultiGPUtrainingWithDDP/: checkpoint.pt  main.py
