[tool.poetry]
name = "tuneuppytorchcode"
version = "0.1.0"
description = ""
authors = ["Tjark Ziehm"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
# Linux
# numpy = { url = "https://download.pytorch.org/whl/numpy-1.24.1-cp311-cp311-manylinux_2_17_x86_64.manylinux2014_x86_64.whl"}
# torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# torchaudio = { url  = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-linux_x86_64.whl"}
# Windows 
numpy = { url = "https://download.pytorch.org/whl/numpy-1.24.1-cp311-cp311-win_amd64.whl"}
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.1%2Bcu118-cp311-cp311-win_amd64.whl"}
torchaudio = { url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.2%2Bcu118-cp311-cp311-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu118/torchvision-0.15.2%2Bcu118-cp311-cp311-win_amd64.whl"}
ipykernel = "^6.23.3"
notebook = "^6.5.4"
matplotlib = "^3.7.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
